updated screen ui

--- a/www/ui/milestone3x_screens/2-7-0(2).html
+++ b/www/ui/milestone3x_screens/2-7-0(2).html
@@ -144,7 +144,7 @@
 		
 		<p id="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
 		
-		<h3>issue to be copied / moved</h3>
+		<h3>Issue to be Copied/Moved</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -160,7 +160,7 @@
 		</tr>
 		</table>
 		
-		<h3>destination project</h3>
+		<h3>Destination Project</h3>
 		
 		<p><select>
 		<option>select project</option>
@@ -184,7 +184,7 @@
 		
 		<p id="functnbar"><input type="submit" value="map issue attributes" /></p>
 		
-		<h3>issue attribute mapping results</h3>
+		<h3>Issue Attribute Mapping Results</h3>
 		
 		<div class="sidebyside">
 			<table border="1" cellspacing="2" cellpadding="3" width="100%">
@@ -248,7 +248,7 @@
 			</table>
 		</div>
 		
-		<h3>attributes that do not exist in destination project (saved as comment)</h3>
+		<h3>Attributes that do not exist in destination project (saved as comment)</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
