--- a/www/ui/milestone3x_screens/2-7-0(1).html
+++ b/www/ui/milestone3x_screens/2-7-0(1).html
@@ -158,7 +158,7 @@
 		</tr>
 		</table>
 		
-		<h3>destination project</h3>
+		<h3>Destination Project</h3>
 		<p><select>
 		<option>select project</option>
 		<option>-------------</option>
