--- a/www/ui/milestone6x_screens/2-4-0_step3c.html
+++ b/www/ui/milestone6x_screens/2-4-0_step3c.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Report name X (2.4.0) step3</title>
+	<title>Report name X (2.4.0) step3c</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -139,8 +139,8 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-0-step3">
-		<h2>Report Name X (2.4.0) step3</h2>
+	<div class="app" id="div2-4-0-step3c">
+		<h2>Report Name X (2.4.0) step3c</h2>
 	
 		<div>
 			<strong>Project:</strong> project X
@@ -154,19 +154,17 @@
 
 		<p>Report Description</p>
 		
-		<p>Report Date/Time: XX/XX/XXXX XX:XX</p>
-		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th>&nbsp;</th>
-		<th>p1 open:</th>
-		<th>p1 closed:</th>
-		<th>P2 open:</th>
-		<th>P2 closed:</th>
+		<th>users</th>
+		<th>XX/XX/2001  p1 open:</th>
+		<th>YY/YY/2001  p1 open:</th>
+		<th>XX/XX/2001 attribute x:</th>
+		<th>YY/YY/2001  attribute x:</th>
 		</tr>
 		
 		<tr class="a">
-		<td><strong>Cause unknown</strong></td>
+		<td><strong>combined project team</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -174,7 +172,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>Cause understood</strong></td>
+		<td><strong>role x</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -182,7 +180,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><strong>Solution designed</strong></td>
+		<td><strong>role z</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -190,7 +188,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>Solution implemented</strong></td>
+		<td><strong>user x</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -198,7 +196,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><strong>Solution verified</strong></td>
+		<td><strong>user y</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -206,24 +204,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>Understood/Ignored</strong></td>
-		<td>XX</td>
-		<td>XX</td>
-		<td>XX</td>
-		<td>XX</td>
-		</tr>
-		
-		
-		<tr class="a">
-		<td><strong>Unresolved</strong></td>
-		<td>XX</td>
-		<td>XX</td>
-		<td>XX</td>
-		<td>XX</td>
-		</tr>
-		
-		<tr class="b">
-		<td><strong>Duplicate</strong></td>
+		<td><strong>user z</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -257,5 +238,3 @@
 </form>
 </body>
 </html>
-
-
