updated screen ui

--- a/www/ui/milestone8x_screens/2-0-0-1-1.html
+++ b/www/ui/milestone8x_screens/2-0-0-1-1.html
@@ -1,55 +1,153 @@
 <!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
 "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
 <html>
+
 <head>
-<title>Add / Remove / Sort Queues (2.0.0.1.1)</title>
-
-<link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
-
-
+<title>Add / remove / sort queues (2.0.0.1.1)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
 </head>
+
 <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
+<form action="#" method="get">
 
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="100" id="leftcol">
-      <div id="projnav">
-       <a href="#">projectnav</a> 
-
-       <ul>
-        <li><a href="#">item1</a></li>
-
-        <li><a href="#">item2</a></li>
-       </ul>
-
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
-      </div>
-     </td>
-
-     <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
-
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
-
-      <div class="app" id="div2-1-4-0">
-	<h2>Add / Remove / Sort Queues (2.0.0.1.1)</h2>
-	
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-	
-	<p class="functnbar">
-	<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
 		
-	<h3>Options</h3>
-	<p>(<a href="#">add predefined queue</a>)&nbsp;(<a href="#">define/add custom queue</a>)</p>
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div2-0-0-1-1">
+		<h2>Add / remove / sort queues (2.0.0.1.1)</h2>
+
+		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		
+		<h3>Options</h3>
+		
+		<p>(<a href="#">add predefined queue</a>)&nbsp;(<a href="#">define/add custom queue</a>)</p>
+		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th><a href="#">remove:</a></th>
@@ -61,8 +159,8 @@
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name 1</a></td>
 		<td><select class="select">
-			<option>1</option>
-			</select>
+		<option>1</option>
+		</select>
 		</td>
 		</tr>
 		
@@ -70,8 +168,8 @@
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name 2</a></td>
 		<td><select class="select">
-			<option>2</option>
-			</select>
+		<option>2</option>
+		</select>
 		</td>
 		</tr>
 		
@@ -79,8 +177,8 @@
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name 3</a></td>
 		<td><select class="select">
-			<option>3</option>
-			</select>
+		<option>3</option>
+		</select>
 		</td>
 		</tr>
 		
@@ -88,8 +186,8 @@
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name 4</a></td>
 		<td><select class="select">
-			<option>4</option>
-			</select>
+		<option>4</option>
+		</select>
 		</td>
 		</tr>
 		
@@ -99,15 +197,28 @@
 		</td>
 		</tr>
 		</table>
-		
-	<p class="functnbar">
-	<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
-</div>
+
+		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+	</div>
+	<!-- Scarab - App -->
+
+<!-- Structural Elements -->
 </td>
 </tr>
 </table>
+<!-- Structural Elements -->
+
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
+
 </form>
 </body>
 </html>
-
-
