fixed capitalization titling

--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Enter Issue Verbose (2.1.2)</title>
+	<title>Enter issue verbose (2.1.2)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-2">
-		<h2>Enter Issue Verbose (2.1.2)</h2>
+		<h2>Enter issue verbose (2.1.2)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
@@ -154,7 +154,7 @@
 		
 		<p id="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
 	
-		<h3>Input Your Issue:</h3>
+		<h3>Input your issue</h3>
 	
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -183,7 +183,7 @@
 	
 		<p><input type="submit" value="add url" />&#160;<input type="submit" value="delete url" /></p>
 	
-		<h3>Add Attachment:</h3>
+		<h3>Add attachment</h3>
 	
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
