--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Customize / Create "Enter Issue"  (2.1.4.0) milestone1 ver.</title>
+	<title>Customize / create "enter issue"  (2.1.4.0) milestone1 ver.</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-4-0">
-		<h2>Customize / Create "Enter Issue"  (2.1.4.0) milestone1 ver.</h2>
+		<h2>Customize / create "enter issue"  (2.1.4.0) milestone1 ver.</h2>
 		
 		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="done" class="button" />&#160;<input type="submit" value="preview" class="button" /></p>
 		
-		<h3>Attribute Group One</h3>
+		<h3>Attribute group one</h3>
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
