--- a/www/ui/milestone1x_screens/2-6-1.html
+++ b/www/ui/milestone1x_screens/2-6-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Issue Detail (2.6.1.x)</title>
+	<title>Issue detail (2.6.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,13 +140,13 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-6-1">
-		<h2>Issue Detail (2.6.1.x)</h2>
+		<h2>Issue detail (2.6.1)</h2>
 	
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	
 		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 
-		<h3>Issue ID #123</h3>
+		<h3>Issue id #123</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -217,7 +217,7 @@
 			</table>
 		</div>
 	
-		<h3>personnel</h3>
+		<h3>Personnel</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -236,7 +236,7 @@
 			</table>
 		</div>
 		
-		<h3>Related Links</h3>
+		<h3>Related links</h3>
 	
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
@@ -266,7 +266,7 @@
 		
 		<p><input type="submit" value="add url" />&#160;<input type="submit" value="delete url" /></p>
 		
-		<h3>Parent Issue</h3>
+		<h3>Parent issue</h3>
 	
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -277,7 +277,7 @@
 			</table>
 		</div>
 		
-		<h3>Child Issues</h3>
+		<h3>Child issues</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -355,7 +355,7 @@
 	
 		<p><a href="#">view all comments (long form)</a></p>
 		
-		<h3>Issue History (up to first ten)</h3>
+		<h3>Issue history (up to first ten)</h3>
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
