--- a/www/ui/milestone1x_screens/2-6-2.html
+++ b/www/ui/milestone1x_screens/2-6-2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Issue Detail Long Form(2.6.2.x)</title>
+	<title>Issue detail long form (2.6.2)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -139,12 +139,12 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div id="div2-6-2" class="app">
-		<h2>Issue Detail Long Form (2.6.2.x)</h2>
+	<div class="app" id="div2-6-2">
+		<h2>Issue detail long form (2.6.2)</h2>
 		
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 				
-		<h3>Issue ID #120</h3>
+		<h3>Issue id #120</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -215,7 +215,7 @@
 			</table>
 		</div>
 		
-		<h3>personnel</h3>
+		<h3>Personnel</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -234,7 +234,7 @@
 			</table>
 		</div>
 		
-		<h3>Related Links</h3>
+		<h3>Related links</h3>
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
@@ -264,7 +264,7 @@
 		
 		<p><input type="submit" value="add url" />&#160;<input type="submit" value="delete url" /></p>
 		
-		<h3>Parent Issue</h3>
+		<h3>Parent issue</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -275,7 +275,7 @@
 			</table>
 		</div>
 		
-		<h3>Child Issues</h3>
+		<h3>Child issues</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -352,7 +352,7 @@
 			</table>
 		</div>
 		
-		<h3>Issue History (up to first ten)</h3>
+		<h3>Issue history (up to first ten)</h3>
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
@@ -385,7 +385,7 @@
 		
 		<p id="functnbar"><input type="submit" value="save issue #120" />&#160;<input type="submit" value="cancel" /></p>
 		
-		<h3>Issue ID #121</h3>
+		<h3>Issue id #121</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -456,7 +456,7 @@
 			</table>
 		</div>
 		
-		<h3>personnel</h3>
+		<h3>Personnel</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -475,7 +475,7 @@
 			</table>
 		</div>
 		
-		<h3>Related Links</h3>
+		<h3>Related links</h3>
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
@@ -505,7 +505,7 @@
 		
 		<p><input type="submit" value="add url" />&#160;<input type="submit" value="delete url" /></p>
 		
-		<h3>Parent Issue</h3>
+		<h3>Parent issue</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -516,7 +516,7 @@
 			</table>
 		</div>
 		
-		<h3>Child Issues</h3>
+		<h3>Child issues</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -593,7 +593,7 @@
 			</table>
 		</div>
 		
-		<h3>Issue History (up to first ten)</h3>
+		<h3>Issue history (up to first ten)</h3>
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
