--- a/www/ui/milestone1x_screens/3-0-0.html
+++ b/www/ui/milestone1x_screens/3-0-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Global Attributes (3.0.0)</title>
+	<title>Global attributes (3.0.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div3-0-0">
-		<h2>Global Attributes (3.0.0)</h2>
+		<h2>Global attributes (3.0.0)</h2>
 		
 		<p id="functnbar"><input type="submit" value="create new attribute" /></p>
 		
-		<h3>Global Attributes</h3>
+		<h3>Global attributes</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
