--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Enter Issue (2.1.0)</title>
+	<title>Enter issue (2.1.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-0">
-		<h2>Enter Issue (2.1.0)</h2>
+		<h2>Enter issue (2.1.0)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
@@ -154,7 +154,7 @@
 				
 		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
 		
-		<h3>apply issue entry template</h3>
+		<h3>Apply issue entry template</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -181,7 +181,7 @@
 			</table>
 		</div>		
 		
-		<h3>Input Your Issue:</h3>
+		<h3>Input your issue</h3>
 		
 		<div class="axial">
 			<table width="100%" cellspacing="2" cellpadding="3" border="1">
