--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Identified as Duplicate (2.1.1)</title>
+	<title>Identified as duplicate (2.1.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-1">
-		<h2>Identified as Duplicate (2.1.1)</h2>
+		<h2>Identified as duplicate (2.1.1)</h2>
 
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
@@ -154,7 +154,7 @@
 		
 		<p id="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
 
-		<h3>New Issue</h3>
+		<h3>New issue</h3>
 
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
@@ -178,7 +178,7 @@
 		</tr>
 		</table>
 
-		<h3>Possible Duplicates</h3>
+		<h3>Possible duplicates</h3>
 
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
