--- a/www/ui/milestone1x_screens/3-0-2-0_step1.html
+++ b/www/ui/milestone1x_screens/3-0-2-0_step1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Add / Edit Attribute (3.0.2.0) step1</title>
+	<title>Add / edit attribute (3.0.2.0) step1</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div3-0-2-0step1">
-		<h2>Add / Edit Attribute (3.0.2.0) step1</h2>
+		<h2>Add / edit attribute (3.0.2.0) step1</h2>
 		
 		<p id="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" /></p>
 		
-		<h3>General Info</h3>
+		<h3>General info</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
