--- a/www/ui/milestone1x_screens/funct_dir.html
+++ b/www/ui/milestone1x_screens/funct_dir.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Scarab Functions Index</title>
+	<title>Scarab functions index</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="divfunct_dir">
-		<h2>Scarab Functions Index</h2>
+		<h2>Scarab functions index</h2>
 		
 		<table width="100%" cellpadding="0" cellspacing="0" border="0">
 		
