fixed capitalization titling / tabs

--- a/www/ui/milestone2x_screens/2-6-0-1.html
+++ b/www/ui/milestone2x_screens/2-6-0-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Add/remove attributes from view (2.6.0.1)</title>
+	<title>Add / remove attributes from view (2.6.0.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-6-0-1">
-		<h2>Add/remove attributes from view (2.6.0.1)</h2>
+		<h2>Add / remove attributes from view (2.6.0.1)</h2>
 
 		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="reset to default" class="button" /></p>
 
-		<h3>attributes</h3>
+		<h3>Attributes</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
