--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Queue List / Search Results (2.6.0.x)</title>
+	<title>Queue list / search results (2.6.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,12 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-6-0">
-		<h2>Queue List / Search Results (2.6.0.x)</h2>
+		<h2>Queue list / search results (2.6.0)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<th>Query</th>
 			<td><a href="#" title="view advanced query information">Avanced query</a></td>
 			<td><a href="#" title="view custom query information">Custom</a></td>
 			<td><a href="#" title="view saved queries">Saved queries</a></td>
@@ -175,7 +174,7 @@
 			</table>
 		</div>
 		
-		<h3>Search Results</h3>
+		<h3>Search results</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
