--- a/www/ui/milestone2x_screens/2-2-0-x.html
+++ b/www/ui/milestone2x_screens/2-2-0-x.html
@@ -140,12 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-2-0-x">
-		<h2>Custom Search (2.2.0.x)</h2>
+		<h2>Custom search (2.2.0.x)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><a href="#" title="view query information">Query</a></td>
 			<td><a href="#" title="view advanced query information">Avanced query</a></td>
 			<th>Custom</th>
 			<td><a href="#" title="view saved queries">Saved queries</a></td>
@@ -155,7 +154,7 @@
 		
 		<p id="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
 		
-		<h3>text search</h3>
+		<h3>Text search</h3>
 		
 <div class="axial">
 <table border="1" cellspacing="2" cellpadding="3">
@@ -177,7 +176,7 @@ URL
 </table>
 </div>
 		
-		<h3>multiple / single choice search</h3>
+		<h3>Multiple / single choice search</h3>
 		
 		<div class="axial">
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
