--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Advanced Query (2.2.0)</title>
+	<title>Advanced query (2.2.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,12 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-2-0">
-		<h2>Advanced Query (2.2.0)</h2>
+		<h2>Advanced query (2.2.0)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><a href="#" title="view query information">Query</a></td>
 			<th>Avanced query</th>
 			<td><a href="#" title="view custom query information">Custom</a></td>
 			<td><a href="#" title="view saved queries">Saved queries</a></td>
@@ -175,7 +174,7 @@
 			</table>
 		</div>
 		
-		<h3>Search the Scarab Knowledge Base</h3>
+		<h3>Search the scarab knowledge base</h3>
 
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -513,7 +512,7 @@
 		</div>
 		
 		
-		<h3>search results view prefs</h3>
+		<h3>Search results view prefs</h3>
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
