--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Save Query (2.2.1)</title>
+	<title>Save query (2.2.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,12 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-2-1">
-		<h2>Save Query (2.2.1)</h2>
+		<h2>Save query (2.2.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><a href="#" title="view query information">Query</a></td>
 			<td><a href="#" title="view advanced query information">Avanced query</a></td>
 			<td><a href="#" title="view custom query information">Custom</a></td>
 			<th>Saved queries</th>
@@ -155,7 +154,7 @@
 		
 		<p id="functnbar"><input type="submit" value="save/submit" />&nbsp;<input type="submit" value="execute" />&nbsp;<input type="submit" value="cancel" /></p>
 		
-		<h3>Save Query Information</h3>
+		<h3>Save query information</h3>
 
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -189,7 +188,7 @@
 			</table>
 		</div>
 		
-		<h3>Saved Query Contents</h3>
+		<h3>Saved query contents</h3>
 
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -302,7 +301,7 @@
 			</table>
 		</div>
 		
-		<h3>State Change Query</h3>
+		<h3>State change query</h3>
 		
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
