fixed capitalization titling

--- a/www/ui/milestone4x_screens/3-5-0.html
+++ b/www/ui/milestone4x_screens/3-5-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Workflow Customization Options (3.5.0)</title>
+	<title>Workflow customization options (3.5.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,16 +140,16 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div3-5-0">
-		<h2>Workflow Customization Options (3.5.0)</h2>
+		<h2>Workflow customization options (3.5.0)</h2>
 		
 		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
-		<h3>My New Issue Alert (email) <a href="#">(edit)</a></h3>
+		<h3>My new issue alert (email) <a href="#">(edit)</a></h3>
 		
 		<p><input type="checkbox" /> allow assignee to reassign issue</p>
 		<p><input type="checkbox" /> allow assignee to share/add multiple assignees</p>
 		
-		<h3>Response Required Setting</h3>
+		<h3>Response required setting</h3>
 		
 		<p><select>
 		<option>1 day</option>
@@ -165,7 +165,7 @@
 		<p><input type="checkbox" /> add to assignee metrics report</p>
 		<p><input type="checkbox" /> return to unassigned issues queue</p>
 		
-		<h3>New Issue Email</h3>
+		<h3>New issue email</h3>
 		
 		<p><input type="checkbox" /> One email delivery <select>
 		<option>daily</option>
@@ -174,7 +174,7 @@
 		</select> with all new issues</p>
 		<p><input type="checkbox" /> one email per new issue.</p>
 		
-		<h3>Daily Status (email) <a href="#">(edit)</a></h3>
+		<h3>Daily status (email) <a href="#">(edit)</a></h3>
 		
 		<p><input type="checkbox" /> all new issues / assignees for all projects 
 		<select>
@@ -192,7 +192,7 @@
 		</select>
 		</p>
 		
-		<h3>Issue Report (email) <a href="#">(edit)</a></h3>
+		<h3>Issue report (email) <a href="#">(edit)</a></h3>
 		
 		<p><input type="checkbox" /> all assigned issues 
 		<select>
