--- a/www/ui/milestone3x_screens/2-0-0-2.html
+++ b/www/ui/milestone3x_screens/2-0-0-2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Vote Management (2.0.0.2)</title>
+	<title>Vote management (2.0.0.2)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,13 +140,13 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-0-0-2">
-		<h2>Vote Management (2.0.0.2)</h2>
+		<h2>Vote management (2.0.0.2)</h2>
 		
 		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
 		
 		<p><a href="#">add/remove attributes from view</a></p>
 		
-		<h3>Issues User X Has Voted On</h3>
+		<h3>Issues user x has voted on</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
