--- a/www/ui/milestone3x_screens/2-1-3.html
+++ b/www/ui/milestone3x_screens/2-1-3.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Assign Issue (2.1.3)</title>
+	<title>Assign issue (2.1.3)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-3">
-		<h2>Assign Issue (2.1.3)</h2>
+		<h2>Assign issue (2.1.3)</h2>
 		
 		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 		
-		<h3>Assign Issue</h3>
+		<h3>Assign issue</h3>
 		
 		<div class="sidebyside">
 			<table cellpadding="3" cellspacing="2" border="1" width="100%">
