--- a/www/ui/milestone4x_screens/2-5-0.html
+++ b/www/ui/milestone4x_screens/2-5-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Workflow Customization Options (2.5.0)</title>
+<title>Workflow customization options (2.5.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-5-0">
-		<h2>Workflow Customization Options (2.5.0)</h2>
+		<h2>Workflow customization options (2.5.0)</h2>
 		
 		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
