--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define Custom Alert Email (3.5.1)</title>
+	<title>Define custom alert email (3.5.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,11 +140,11 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div3-5-1">
-		<h2>Define Custom Alert Email (3.5.1)</h2>
+		<h2>Define custom alert email (3.5.1)</h2>
 		
 		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
 		
-		<h3>custom alert email for project:</h3>
+		<h3>Custom alert email for project:</h3>
 		
 		<p><select>
 		<option>select project</option>
@@ -160,7 +160,7 @@
 		</select>
 		</p>
 		
-		<h3>Email Contents</h3>
+		<h3>Email contents</h3>
 		
 		<div class="axial">
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -183,7 +183,7 @@
 			</table>
 		</div>
 		
-		<h3>attributes queried in email</h3>
+		<h3>Attributes queried in email</h3>
 		
 		<p><a href="#">Add/remove attributes from query</a></p>
 		
