fixed capitalization titling

--- a/www/ui/milestone6x_screens/2-4-0_step1-5b.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1-5b.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define Report (2.4.0) step1-5b</title>
+	<title>Define report (2.4.0) step1-5b</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,9 +140,9 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-0-step1-5b">
-		<h2>Define Report (2.4.0) step1-5b</h2>
+		<h2>Define report (2.4.0) step1-5b</h2>
 		
-		<h3>Report Builder</h3>
+		<h3>Report builder</h3>
 		
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
@@ -168,7 +168,7 @@
 			</table>
 		</div>	  
 		
-		<h3>Report Content</h3>	  
+		<h3>Report content</h3>	  
 		
 		<p>
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
