--- a/www/ui/milestone6x_screens/2-4-0_step3c.html
+++ b/www/ui/milestone6x_screens/2-4-0_step3c.html
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-0-step3c">
-		<h2>Report Name X (2.4.0) step3c</h2>
+		<h2>Report name X (2.4.0) step3c</h2>
 	
 		<div>
 			<strong>Project:</strong> project X
