--- a/www/ui/milestone10x_screens/2-1-0-2.html
+++ b/www/ui/milestone10x_screens/2-1-0-2.html
@@ -150,7 +150,7 @@
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th nowrap="nowrap"><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
 		<th><a href="#" title="sort">template name:</a></th>
 		<th><a href="#" title="sort">template descr:</a></th>
 		<th><a href="#" title="sort">project(s):</a></th>
