--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Approve reject user submitted x (3.6.0)</title>
+	<title>Approve / reject user submitted x (3.6.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,7 +140,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div3-6-0">
-		<h2>Approve reject user submitted x (3.6.0)</h2>
+		<h2>Approve / reject user submitted x (3.6.0)</h2>
 
 		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
 		
